--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ chromadb==0.5.0 # Vector storage
 openai==1.31.1 # For embeddings
 tiktoken==0.7.0  # For embeddings 
 
+google-generativeai
+langchain-google-genai
+langchain-google-vertexai
+
 # install markdown depenendies with: `pip install "unstructured[md]"` after install the requirements file. Leave this line commented out. 
